--- a/Logging.vcxproj.filters
+++ b/Logging.vcxproj.filters
@@ -99,5 +99,6 @@
   <ItemGroup>
     <None Include="src\defaultconfig\UpgradeLog.htm" />
     <None Include="src\defaultconfig\UpgradeLog2.htm" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
