added csv support.

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,7 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/Legacy Log Files/116_9_16_0_12_59.csv
+/Legacy Log Files/116_9_16_0_10_4.csv
+/Legacy Log Files/116_9_15_23_38_23.csv
+/Legacy Log Files/116_9_15_23_33_45.csv
