--- a/Logging.vcxproj
+++ b/Logging.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="src\defaultconfig\default\PFWXmlBroker.cpp" />
     <ClCompile Include="src\DefaultConfig\Default\Sorting.cpp" />
     <ClCompile Include="src\defaultconfig\default\TestEquipmentBroker.cpp" />
+    <ClCompile Include="src\DefaultConfig\Default\TestEquipmentCsvBroker.cpp" />
     <ClCompile Include="src\DefaultConfig\Default\Time.cpp" />
     <ClCompile Include="src\defaultconfig\MainLogging.cpp" />
   </ItemGroup>
@@ -98,6 +99,7 @@
     <ClInclude Include="src\DefaultConfig\Default\Singleton.h" />
     <ClInclude Include="src\DefaultConfig\Default\Sorting.h" />
     <ClInclude Include="src\defaultconfig\default\TestEquipmentBroker.h" />
+    <ClInclude Include="src\DefaultConfig\Default\TestEquipmentCsvBroker.h" />
     <ClInclude Include="src\DefaultConfig\Default\Time.h" />
     <ClInclude Include="src\defaultconfig\default\VirtualProxy.h" />
     <ClInclude Include="src\defaultconfig\MainLogging.h" />
